libclay/_clay.pxd


    Clay_ElementId Clay__HashString(Clay_String key, uint32_t offset, uint32_t seed)

    void Clay__OpenTextElement(Clay_String text, Clay_TextElementConfig* textConfig)

    Clay_TextElementConfig* Clay__StoreTextElementConfig(Clay_TextElementConfig config)

    uint32_t Clay__GetParentElementId()

    Clay_Color Clay__debugViewHighlightColor

    uint32_t Clay__debugViewWidth
